--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#Generated
+*.freezed.dart
+*.g.dart
+*.gr.dart
+*.mocks.dart
+
 # Miscellaneous
 *.class
 *.log
@@ -27,6 +33,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
